--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <hr size="1">
             <p><em>FOUNDER FOR  <strong> <a href="http://127.0.0.1:5500/index.html.html">www.myportfolio.com</a></strong></em></p>
-            <p>“Hello, my name is Kushiram, and I recently worked as a [Java developer]at [Google]. I successfully managed a team of 10 members, achieving a sucesses. I’m excited about the opportunity at [Google] ..”</p>
+            <p>“Hello, my name is Kushiram, and I recently worked as a [Java developer]at [Google]. I successfully managed a team of 10 members, achieving a sucesses. I’m excited about the opportunity at [Google] ............”</p>
           
             <details>
                 <summary>MY PROJECTS</summary>
